--- a/try_1.ipynb
+++ b/try_1.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.15.0\n"
+      "2.14.0\n"
      ]
     }
    ],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1241,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1292,7 +1292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1300,20 +1300,53 @@
      "output_type": "stream",
      "text": [
       "press 0 if you want to talk with the chatbot, or press any other key to exit\n",
-      "cetbot activated\n",
+      "Chatbot activated\n",
       "Listening...\n",
-      "Recognizing...\n"
+      "Recognizing...\n",
+      "good morning\n",
+      "1/1 [==============================] - 0s 127ms/step\n",
+      "Hello\n",
+      "Listening...\n",
+      "Recognizing...\n",
+      "how are you\n",
+      "1/1 [==============================] - 0s 26ms/step\n",
+      "I am feeling good, you?\n"
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "pred_class() missing 1 required positional argument: 'model'",
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception ignored in: <function BSTR.__del__ at 0x0000021A6C263520>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\PC\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\comtypes\\__init__.py\", line 683, in __del__\n",
+      "    def __del__(self, _free=windll.oleaut32.SysFreeString):\n",
+      "KeyboardInterrupt: \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Listening...\n",
+      "Recognizing...\n",
+      "Unknown error occurred\n",
+      "Listening...\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[24], line 31\u001b[0m\n\u001b[0;32m     29\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mChatbot deactivated. Press 0 to activate again.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     30\u001b[0m     \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[1;32m---> 31\u001b[0m intents \u001b[38;5;241m=\u001b[39m \u001b[43mpred_class\u001b[49m\u001b[43m(\u001b[49m\u001b[43minpText\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mwords\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mclasses\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     32\u001b[0m result \u001b[38;5;241m=\u001b[39m get_response(intents, data)\n\u001b[0;32m     33\u001b[0m engine \u001b[38;5;241m=\u001b[39m pyttsx3\u001b[38;5;241m.\u001b[39minit()\n",
-      "\u001b[1;31mTypeError\u001b[0m: pred_class() missing 1 required positional argument: 'model'"
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[10], line 60\u001b[0m\n\u001b[0;32m     58\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mChatbot activated\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     59\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[1;32m---> 60\u001b[0m     inpText \u001b[38;5;241m=\u001b[39m \u001b[43mrecord_text\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     61\u001b[0m     \u001b[38;5;28mprint\u001b[39m(inpText)\n\u001b[0;32m     62\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m inpText\u001b[38;5;241m.\u001b[39mlower() \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m0\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n",
+      "Cell \u001b[1;32mIn[10], line 13\u001b[0m, in \u001b[0;36mrecord_text\u001b[1;34m()\u001b[0m\n\u001b[0;32m     11\u001b[0m r\u001b[38;5;241m.\u001b[39madjust_for_ambient_noise(source2, duration\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mListening...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 13\u001b[0m audio2 \u001b[38;5;241m=\u001b[39m \u001b[43mr\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlisten\u001b[49m\u001b[43m(\u001b[49m\u001b[43msource2\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRecognizing...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m r\u001b[38;5;241m.\u001b[39mrecognize_google(audio2)\n",
+      "File \u001b[1;32mc:\\Users\\PC\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\speech_recognition\\__init__.py:523\u001b[0m, in \u001b[0;36mRecognizer.listen\u001b[1;34m(self, source, timeout, phrase_time_limit, snowboy_configuration)\u001b[0m\n\u001b[0;32m    520\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m phrase_time_limit \u001b[38;5;129;01mand\u001b[39;00m elapsed_time \u001b[38;5;241m-\u001b[39m phrase_start_time \u001b[38;5;241m>\u001b[39m phrase_time_limit:\n\u001b[0;32m    521\u001b[0m     \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[1;32m--> 523\u001b[0m buffer \u001b[38;5;241m=\u001b[39m \u001b[43msource\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstream\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread\u001b[49m\u001b[43m(\u001b[49m\u001b[43msource\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mCHUNK\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    524\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(buffer) \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m: \u001b[38;5;28;01mbreak\u001b[39;00m  \u001b[38;5;66;03m# reached end of the stream\u001b[39;00m\n\u001b[0;32m    525\u001b[0m frames\u001b[38;5;241m.\u001b[39mappend(buffer)\n",
+      "File \u001b[1;32mc:\\Users\\PC\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\speech_recognition\\__init__.py:199\u001b[0m, in \u001b[0;36mMicrophone.MicrophoneStream.read\u001b[1;34m(self, size)\u001b[0m\n\u001b[0;32m    198\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mread\u001b[39m(\u001b[38;5;28mself\u001b[39m, size):\n\u001b[1;32m--> 199\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpyaudio_stream\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread\u001b[49m\u001b[43m(\u001b[49m\u001b[43msize\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mexception_on_overflow\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\PC\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pyaudio\\__init__.py:570\u001b[0m, in \u001b[0;36mPyAudio.Stream.read\u001b[1;34m(self, num_frames, exception_on_overflow)\u001b[0m\n\u001b[0;32m    567\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_is_input:\n\u001b[0;32m    568\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mIOError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNot input stream\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m    569\u001b[0m                   paCanNotReadFromAnOutputOnlyStream)\n\u001b[1;32m--> 570\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mpa\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_stream\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_stream\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_frames\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    571\u001b[0m \u001b[43m                      \u001b[49m\u001b[43mexception_on_overflow\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -1338,24 +1371,59 @@
     "        except sr.UnknownValueError:\n",
     "            print(\"Unknown error occurred\")\n",
     "\n",
+    "# while True:\n",
+    "#     print(\"press 0 if you want to talk with the chatbot, or press any other key to exit\")\n",
+    "#     choice = input()\n",
+    "#     if choice == \"0\":\n",
+    "#         print(\"cetbot activated\")\n",
+    "#         while True:\n",
+    "#             inpText = record_text()\n",
+    "#             if inpText.lower() == \"0\":\n",
+    "#                 print(\"Chatbot deactivated. Press 0 to activate again.\")\n",
+    "#                 break\n",
+    "#             intents = pred_class(inpText, words, classes)\n",
+    "#             result = get_response(intents, data)\n",
+    "#             engine = pyttsx3.init()\n",
+    "#             engine.say(result)\n",
+    "#             engine.runAndWait()\n",
+    "#             print(engine)\n",
+    "#     else:\n",
+    "#         break\n",
+    "\n",
+    "model = load_model(\"chatbot_AI.h5\")\n",
+    "\n",
+    "def get_response(intents_list, intents_json):\n",
+    "    if not intents_list:\n",
+    "        return \"Sorry! I don't understand.\"\n",
+    "    else:\n",
+    "        tag = intents_list[0]\n",
+    "        list_of_intents = intents_json[\"intents\"]\n",
+    "        for i in list_of_intents:\n",
+    "            if i[\"tag\"] == tag:\n",
+    "                result = random.choice(i[\"responses\"])\n",
+    "                break\n",
+    "        return result\n",
+    "\n",
     "while True:\n",
     "    print(\"press 0 if you want to talk with the chatbot, or press any other key to exit\")\n",
     "    choice = input()\n",
     "    if choice == \"0\":\n",
-    "        print(\"cetbot activated\")\n",
+    "        print(\"Chatbot activated\")\n",
     "        while True:\n",
     "            inpText = record_text()\n",
+    "            print(inpText)\n",
     "            if inpText.lower() == \"0\":\n",
     "                print(\"Chatbot deactivated. Press 0 to activate again.\")\n",
     "                break\n",
-    "            intents = pred_class(inpText, words, classes)\n",
+    "            intents = pred_class(inpText, words, classes, model)\n",
     "            result = get_response(intents, data)\n",
+    "            print(result)\n",
     "            engine = pyttsx3.init()\n",
     "            engine.say(result)\n",
     "            engine.runAndWait()\n",
-    "            print(engine)\n",
     "    else:\n",
-    "        break\n"
+    "        break\n",
+    "\n"
    ]
   },
   {
