--- a/try_1.ipynb
+++ b/try_1.ipynb
@@ -45,7 +45,7 @@
    "source": [
     "with open('intents_exercise.json', encoding='utf-8') as file:\n",
     "    data = json.load(file)\n",
-    "    print(data)"
+    "    # print(data)"
    ]
   },
   {
@@ -55,32 +55,27 @@
    "outputs": [],
    "source": [
     "# Creating data X and data Y\n",
-    "words = []  # For BoW model/ vocabulary for patterns\n",
-    "classes = []  # For BoW model/ vocabulary for tags\n",
-    "data_X = []  # For storing each pattern\n",
-    "data_y = []  # For storing tag corresponding to each pattern in data_X\n",
+    "words = []  \n",
+    "classes = []  \n",
+    "data_X = []\n",
+    "data_y = []\n",
     "\n",
     "# Iterating over all the intents\n",
     "for intent in data[\"intents\"]:\n",
     "    for pattern in intent[\"patterns\"]:\n",
-    "        # Tokenize each pattern\n",
     "        tokens = nltk.word_tokenize(pattern)\n",
-    "        words.extend(tokens)  # Append tokens to words\n",
-    "        data_X.append(pattern)  # Appending pattern to data_X\n",
-    "        data_y.append(intent[\"tag\"])  # Appending the associated tag to each pattern\n",
+    "        words.extend(tokens)  \n",
+    "        data_X.append(pattern) \n",
+    "        data_y.append(intent[\"tag\"])\n",
     "\n",
-    "        # Adding the tag to the classes if it's not there already\n",
     "        if intent[\"tag\"] not in classes:\n",
     "            classes.append(intent[\"tag\"])\n",
     "\n",
-    "# Initializing lemmatizer to get stem of words\n",
     "lemmatizer = WordNetLemmatizer()\n",
     "\n",
-    "# Lemmatize all the words in the vocab and convert them to lowercase\n",
-    "# if the words don't appear in punctuation\n",
     "words = [lemmatizer.lemmatize(word.lower()) for word in words if word not in string.punctuation]\n",
     "\n",
-    "# Sorting the vocab and classes in alphabetical order and taking the set to ensure no duplicates occur\n",
+    "\n",
     "words = sorted(set(words))\n",
     "classes = sorted(set(classes))\n",
     "\n",
@@ -1370,25 +1365,6 @@
     "            print(\"Could not request results; {0}\".format(e))\n",
     "        except sr.UnknownValueError:\n",
     "            print(\"Unknown error occurred\")\n",
-    "\n",
-    "# while True:\n",
-    "#     print(\"press 0 if you want to talk with the chatbot, or press any other key to exit\")\n",
-    "#     choice = input()\n",
-    "#     if choice == \"0\":\n",
-    "#         print(\"cetbot activated\")\n",
-    "#         while True:\n",
-    "#             inpText = record_text()\n",
-    "#             if inpText.lower() == \"0\":\n",
-    "#                 print(\"Chatbot deactivated. Press 0 to activate again.\")\n",
-    "#                 break\n",
-    "#             intents = pred_class(inpText, words, classes)\n",
-    "#             result = get_response(intents, data)\n",
-    "#             engine = pyttsx3.init()\n",
-    "#             engine.say(result)\n",
-    "#             engine.runAndWait()\n",
-    "#             print(engine)\n",
-    "#     else:\n",
-    "#         break\n",
     "\n",
     "model = load_model(\"chatbot_AI.h5\")\n",
     "\n",
